migrate/land-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing
spec:
  finalizers:
  - kubernetes
