migrate/land-deploy.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: landing
  namespace: landing
spec:
  replicas: 1
  selector:
    deploymentconfig: landing
  template:
    metadata:
      labels:
        deploymentconfig: landing
    spec:
      containers:
      - image: registry.ocp4.example.com:8443/developer/redhat-landing
        name: landing
        ports:
        - containerPort: 80
          protocol: TCP
