migrate/land-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: landing
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: landing
  type: ClusterIP
