migrate/land-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: landing
  namespace: landing
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /testpath
            backend:
              serviceName: test
              servicePort: 80
